Fix Feature boxes titles wrapping in middle of the word

--- a/content/_sass/partials/home/_features.scss
+++ b/content/_sass/partials/home/_features.scss
@@ -83,6 +83,8 @@
   .feature-title {
     font-size: 1.3rem;
     height: 3rem;
+    overflow-wrap: break-word;
+    word-break: normal;
   }
 }
 
